# meson-embed

./: README.md
scripts/templates/: cmsis.wrap  default.ld  default.ld.in  meson.build  meson.options
subprojects/packagefiles/st-cmsis-c0/: meson.build
subprojects/packagefiles/st-cmsis-c0/ld/: stm32c011d6.ld  stm32c011f4.ld  stm32c011f6.ld  stm32c011j4.ld  stm32c011j6.ld  stm32c031c4.ld  stm32c031c6.ld  stm32c031f4.ld  stm32c031f6.ld  stm32c031g4.ld  stm32c031g6.ld  stm32c031k4.ld  stm32c031k6.ld  stm32c051c6.ld  stm32c051c8.ld  stm32c051d8.ld  stm32c051f6.ld  stm32c051f8.ld  stm32c051g6.ld  stm32c051g8.ld  stm32c051k6.ld  stm32c051k8.ld  stm32c071c8.ld  stm32c071cb.ld  stm32c071f8.ld  stm32c071fb.ld  stm32c071g8.ld  stm32c071gb.ld  stm32c071k8.ld  stm32c071kb.ld  stm32c071r8.ld  stm32c071rb.ld  stm32c091cb.ld  stm32c091cc.ld  stm32c091fb.ld  stm32c091fc.ld  stm32c091gb.ld  stm32c091gc.ld  stm32c091kb.ld  stm32c091kc.ld  (+13 more)
subprojects/packagefiles/st-cmsis-f0/: meson.build  meson.options
subprojects/packagefiles/st-cmsis-f0/ld/: stm32f030c6.ld  stm32f030c8.ld  stm32f030cc.ld  stm32f030f4.ld  stm32f030k6.ld  stm32f030r8.ld  stm32f030rc.ld  stm32f031c4.ld  stm32f031c6.ld  stm32f031e6.ld  stm32f031f4.ld  stm32f031f6.ld  stm32f031g4.ld  stm32f031g6.ld  stm32f031k4.ld  stm32f031k6.ld  stm32f038c6.ld  stm32f038e6.ld  stm32f038f6.ld  stm32f038g6.ld  stm32f038k6.ld  stm32f042c4.ld  stm32f042c6.ld  stm32f042f4.ld  stm32f042f6.ld  stm32f042g4.ld  stm32f042g6.ld  stm32f042k4.ld  stm32f042k6.ld  stm32f042t6.ld  stm32f048c6.ld  stm32f048g6.ld  stm32f048t6.ld  stm32f051c4.ld  stm32f051c6.ld  stm32f051c8.ld  stm32f051k4.ld  stm32f051k6.ld  stm32f051k8.ld  stm32f051r4.ld  (+33 more)
subprojects/packagefiles/st-cmsis-f2/: meson.build
subprojects/packagefiles/st-cmsis-f2/ld/: stm32f205rb.ld  stm32f205rc.ld  stm32f205re.ld  stm32f205rf.ld  stm32f205rg.ld  stm32f205vb.ld  stm32f205vc.ld  stm32f205ve.ld  stm32f205vf.ld  stm32f205vg.ld  stm32f205zc.ld  stm32f205ze.ld  stm32f205zf.ld  stm32f205zg.ld  stm32f207ic.ld  stm32f207ie.ld  stm32f207if.ld  stm32f207ig.ld  stm32f207vc.ld  stm32f207ve.ld  stm32f207vf.ld  stm32f207vg.ld  stm32f207zc.ld  stm32f207ze.ld  stm32f207zf.ld  stm32f207zg.ld  stm32f215re.ld  stm32f215rg.ld  stm32f215ve.ld  stm32f215vg.ld  stm32f215ze.ld  stm32f215zg.ld  stm32f217ie.ld  stm32f217ig.ld  stm32f217ve.ld  stm32f217vg.ld  stm32f217ze.ld  stm32f217zg.ld
subprojects/packagefiles/st-cmsis-f3/: meson.build
subprojects/packagefiles/st-cmsis-f3/ld/: stm32f301c6.ld  stm32f301c8.ld  stm32f301k6.ld  stm32f301k8.ld  stm32f301r6.ld  stm32f301r8.ld  stm32f302c6.ld  stm32f302c8.ld  stm32f302cb.ld  stm32f302cc.ld  stm32f302k6.ld  stm32f302k8.ld  stm32f302r6.ld  stm32f302r8.ld  stm32f302rb.ld  stm32f302rc.ld  stm32f302rd.ld  stm32f302re.ld  stm32f302vb.ld  stm32f302vc.ld  stm32f302vd.ld  stm32f302ve.ld  stm32f302zd.ld  stm32f302ze.ld  stm32f303c6.ld  stm32f303c8.ld  stm32f303cb.ld  stm32f303cc.ld  stm32f303k6.ld  stm32f303k8.ld  stm32f303r6.ld  stm32f303r8.ld  stm32f303rb.ld  stm32f303rc.ld  stm32f303rd.ld  stm32f303re.ld  stm32f303vb.ld  stm32f303vc.ld  stm32f303vd.ld  stm32f303ve.ld  (+29 more)
subprojects/packagefiles/st-cmsis-f4/: default.ld.in  meson.build
subprojects/packagefiles/st-cmsis-f4/ld/: stm32f401cb.ld  stm32f401cc.ld  stm32f401cd.ld  stm32f401ce.ld  stm32f401rb.ld  stm32f401rc.ld  stm32f401rd.ld  stm32f401re.ld  stm32f401vb.ld  stm32f401vc.ld  stm32f401vd.ld  stm32f401ve.ld  stm32f405oe.ld  stm32f405og.ld  stm32f405rg.ld  stm32f405vg.ld  stm32f405zg.ld  stm32f407ie.ld  stm32f407ig.ld  stm32f407ve.ld  stm32f407vg.ld  stm32f407ze.ld  stm32f407zg.ld  stm32f410c8.ld  stm32f410cb.ld  stm32f410r8.ld  stm32f410rb.ld  stm32f410t8.ld  stm32f410tb.ld  stm32f411cc.ld  stm32f411ce.ld  stm32f411rc.ld  stm32f411re.ld  stm32f411vc.ld  stm32f411ve.ld  stm32f412ce.ld  stm32f412cg.ld  stm32f412re.ld  stm32f412rg.ld  stm32f412ve.ld  (+109 more)
subprojects/packagefiles/st-cmsis-f7/: meson.build
subprojects/packagefiles/st-cmsis-f7/ld/: stm32f722ic.ld  stm32f722ie.ld  stm32f722rc.ld  stm32f722re.ld  stm32f722vc.ld  stm32f722ve.ld  stm32f722zc.ld  stm32f722ze.ld  stm32f723ic.ld  stm32f723ie.ld  stm32f723vc.ld  stm32f723ve.ld  stm32f723zc.ld  stm32f723ze.ld  stm32f730i8.ld  stm32f730r8.ld  stm32f730v8.ld  stm32f730z8.ld  stm32f732ie.ld  stm32f732re.ld  stm32f732ve.ld  stm32f732ze.ld  stm32f733ie.ld  stm32f733ve.ld  stm32f733ze.ld  stm32f745ie.ld  stm32f745ig.ld  stm32f745ve.ld  stm32f745vg.ld  stm32f745ze.ld  stm32f745zg.ld  stm32f746be.ld  stm32f746bg.ld  stm32f746ie.ld  stm32f746ig.ld  stm32f746ne.ld  stm32f746ng.ld  stm32f746ve.ld  stm32f746vg.ld  stm32f746ze.ld  (+46 more)
subprojects/packagefiles/st-cmsis-g0/: meson.build
subprojects/packagefiles/st-cmsis-g0/ld/: stm32g030c6.ld  stm32g030c8.ld  stm32g030f6.ld  stm32g030j6.ld  stm32g030k6.ld  stm32g030k8.ld  stm32g031c4.ld  stm32g031c6.ld  stm32g031c8.ld  stm32g031f4.ld  stm32g031f6.ld  stm32g031f8.ld  stm32g031g4.ld  stm32g031g6.ld  stm32g031g8.ld  stm32g031j4.ld  stm32g031j6.ld  stm32g031k4.ld  stm32g031k6.ld  stm32g031k8.ld  stm32g031y8.ld  stm32g041c6.ld  stm32g041c8.ld  stm32g041f6.ld  stm32g041f8.ld  stm32g041g6.ld  stm32g041g8.ld  stm32g041j6.ld  stm32g041k6.ld  stm32g041k8.ld  (+69 more)
subprojects/packagefiles/st-cmsis-g4/: meson.build
subprojects/packagefiles/st-cmsis-h5/: meson.build
subprojects/packagefiles/st-cmsis-h7/: meson.build
subprojects/packagefiles/st-cmsis-h7rs/: meson.build
subprojects/packagefiles/st-cmsis-l0/: meson.build
subprojects/packagefiles/st-cmsis-l1/: meson.build
subprojects/packagefiles/st-cmsis-l4/: meson.build
subprojects/packagefiles/st-cmsis-l5/: meson.build
subprojects/packagefiles/st-cmsis-n6/: meson.build
subprojects/packagefiles/st-cmsis-u0/: meson.build
subprojects/packagefiles/st-cmsis-u3/: meson.build
subprojects/packagefiles/st-cmsis-u5/: meson.build
subprojects/packagefiles/st-cmsis-wb/: meson.build
subprojects/packagefiles/st-cmsis-wb0/: meson.build
subprojects/packagefiles/st-cmsis-wba/: meson.build
subprojects/packagefiles/st-cmsis-wl/: meson.build
subprojects/packagefiles/st-cmsis-wl3/: meson.build
(+975 files in other folders)
