project('st-cmsis-f4', 'c', 'cpp',
  license: 'Apache-2.0',
  meson_version: '>=1.5.1',
  version: '2.6.10',
  default_options: ['default_library=static', 'b_staticpic=false'],
)

st_cmsis_core = dependency('st-cmsis-core', version: '5.9.0')
root = 'cmsis-device-f4-2.6.10'

# Per type dependencies with -D compiler flags and startup sources
types = [
  'stm32f401_c', 
  'stm32f401_e', 
  'stm32f405__', 
  'stm32f407__', 
  'stm32f410c_', 
  'stm32f410r_', 
  'stm32f410t_', 
  'stm32f411_e', 
  'stm32f412c_', 
  'stm32f412r_', 
  'stm32f412v_', 
  'stm32f412z_', 
  'stm32f413__', 
  'stm32f415__', 
  'stm32f417__', 
  'stm32f423__', 
  'stm32f427__', 
  'stm32f429__', 
  'stm32f437__', 
  'stm32f439__', 
  'stm32f446__', 
  'stm32f469__', 
  'stm32f479__', 
]
system_src = files(root / 'Source' / 'Templates' / 'system_stm32f4xx.c')
foreach type : types
  type_lower = type.replace('_', 'x')
  startup_src = files(root / 'Source' / 'Templates' / 'gcc' / f'startup_@type_lower@.s')
  type_define = '-D' + type.to_upper().replace('_', 'x')
  pkg_define = '-DSTM32F4'  # This can be used with universal stm32 header 

  lib = static_library(
    f'st_cmsis_@type_lower@', system_src, startup_src,
    build_by_default: false,
    dependencies: [st_cmsis_core],
    include_directories: root / 'Include',
    c_args: type_define,
    cpp_args: type_define,
  )
  set_variable(f'st_cmsis_@type@_dep', declare_dependency(
    version: meson.project_version(),
    dependencies: [st_cmsis_core],
    include_directories: root / 'Include',
    compile_args: [type_define, pkg_define],
    link_with: lib,
  ))
endforeach

# Per MCU dependencies with default linker script
mcus = {
    'stm32f401cb': 'stm32f401_c',
    'stm32f401cc': 'stm32f401_c',
    'stm32f401cd': 'stm32f401_e',
    'stm32f401ce': 'stm32f401_e',
    'stm32f401rb': 'stm32f401_c',
    'stm32f401rc': 'stm32f401_c',
    'stm32f401rd': 'stm32f401_e',
    'stm32f401re': 'stm32f401_e',
    'stm32f401vb': 'stm32f401_c',
    'stm32f401vc': 'stm32f401_c',
    'stm32f401vd': 'stm32f401_e',
    'stm32f401ve': 'stm32f401_e',
    'stm32f405oe': 'stm32f405__',
    'stm32f405og': 'stm32f405__',
    'stm32f405rg': 'stm32f405__',
    'stm32f405vg': 'stm32f405__',
    'stm32f405zg': 'stm32f405__',
    'stm32f407ie': 'stm32f407__',
    'stm32f407ig': 'stm32f407__',
    'stm32f407ve': 'stm32f407__',
    'stm32f407vg': 'stm32f407__',
    'stm32f407ze': 'stm32f407__',
    'stm32f407zg': 'stm32f407__',
    'stm32f410c8': 'stm32f410c_',
    'stm32f410cb': 'stm32f410c_',
    'stm32f410r8': 'stm32f410r_',
    'stm32f410rb': 'stm32f410r_',
    'stm32f410t8': 'stm32f410t_',
    'stm32f410tb': 'stm32f410t_',
    'stm32f411cc': 'stm32f411_e',
    'stm32f411ce': 'stm32f411_e',
    'stm32f411rc': 'stm32f411_e',
    'stm32f411re': 'stm32f411_e',
    'stm32f411vc': 'stm32f411_e',
    'stm32f411ve': 'stm32f411_e',
    'stm32f412ce': 'stm32f412c_',
    'stm32f412cg': 'stm32f412c_',
    'stm32f412re': 'stm32f412r_',
    'stm32f412rg': 'stm32f412r_',
    'stm32f412ve': 'stm32f412v_',
    'stm32f412vg': 'stm32f412v_',
    'stm32f412ze': 'stm32f412z_',
    'stm32f412zg': 'stm32f412z_',
    'stm32f413cg': 'stm32f413__',
    'stm32f413ch': 'stm32f413__',
    'stm32f413mg': 'stm32f413__',
    'stm32f413mh': 'stm32f413__',
    'stm32f413rg': 'stm32f413__',
    'stm32f413rh': 'stm32f413__',
    'stm32f413vg': 'stm32f413__',
    'stm32f413vh': 'stm32f413__',
    'stm32f413zg': 'stm32f413__',
    'stm32f413zh': 'stm32f413__',
    'stm32f415og': 'stm32f415__',
    'stm32f415rg': 'stm32f415__',
    'stm32f415vg': 'stm32f415__',
    'stm32f415zg': 'stm32f415__',
    'stm32f417ie': 'stm32f417__',
    'stm32f417ig': 'stm32f417__',
    'stm32f417ve': 'stm32f417__',
    'stm32f417vg': 'stm32f417__',
    'stm32f417ze': 'stm32f417__',
    'stm32f417zg': 'stm32f417__',
    'stm32f423ch': 'stm32f423__',
    'stm32f423mh': 'stm32f423__',
    'stm32f423rh': 'stm32f423__',
    'stm32f423vh': 'stm32f423__',
    'stm32f423zh': 'stm32f423__',
    'stm32f427ag': 'stm32f427__',
    'stm32f427ai': 'stm32f427__',
    'stm32f427ig': 'stm32f427__',
    'stm32f427ii': 'stm32f427__',
    'stm32f427vg': 'stm32f427__',
    'stm32f427vi': 'stm32f427__',
    'stm32f427zg': 'stm32f427__',
    'stm32f427zi': 'stm32f427__',
    'stm32f429ag': 'stm32f429__',
    'stm32f429ai': 'stm32f429__',
    'stm32f429be': 'stm32f429__',
    'stm32f429bg': 'stm32f429__',
    'stm32f429bi': 'stm32f429__',
    'stm32f429ie': 'stm32f429__',
    'stm32f429ig': 'stm32f429__',
    'stm32f429ii': 'stm32f429__',
    'stm32f429ne': 'stm32f429__',
    'stm32f429ng': 'stm32f429__',
    'stm32f429ni': 'stm32f429__',
    'stm32f429ve': 'stm32f429__',
    'stm32f429vg': 'stm32f429__',
    'stm32f429vi': 'stm32f429__',
    'stm32f429ze': 'stm32f429__',
    'stm32f429zg': 'stm32f429__',
    'stm32f429zi': 'stm32f429__',
    'stm32f437ai': 'stm32f437__',
    'stm32f437ig': 'stm32f437__',
    'stm32f437ii': 'stm32f437__',
    'stm32f437vg': 'stm32f437__',
    'stm32f437vi': 'stm32f437__',
    'stm32f437zg': 'stm32f437__',
    'stm32f437zi': 'stm32f437__',
    'stm32f439ai': 'stm32f439__',
    'stm32f439bg': 'stm32f439__',
    'stm32f439bi': 'stm32f439__',
    'stm32f439ig': 'stm32f439__',
    'stm32f439ii': 'stm32f439__',
    'stm32f439ng': 'stm32f439__',
    'stm32f439ni': 'stm32f439__',
    'stm32f439vg': 'stm32f439__',
    'stm32f439vi': 'stm32f439__',
    'stm32f439zg': 'stm32f439__',
    'stm32f439zi': 'stm32f439__',
    'stm32f446mc': 'stm32f446__',
    'stm32f446me': 'stm32f446__',
    'stm32f446rc': 'stm32f446__',
    'stm32f446re': 'stm32f446__',
    'stm32f446vc': 'stm32f446__',
    'stm32f446ve': 'stm32f446__',
    'stm32f446zc': 'stm32f446__',
    'stm32f446ze': 'stm32f446__',
    'stm32f469ae': 'stm32f469__',
    'stm32f469ag': 'stm32f469__',
    'stm32f469ai': 'stm32f469__',
    'stm32f469be': 'stm32f469__',
    'stm32f469bg': 'stm32f469__',
    'stm32f469bi': 'stm32f469__',
    'stm32f469ie': 'stm32f469__',
    'stm32f469ig': 'stm32f469__',
    'stm32f469ii': 'stm32f469__',
    'stm32f469ne': 'stm32f469__',
    'stm32f469ng': 'stm32f469__',
    'stm32f469ni': 'stm32f469__',
    'stm32f469ve': 'stm32f469__',
    'stm32f469vg': 'stm32f469__',
    'stm32f469vi': 'stm32f469__',
    'stm32f469ze': 'stm32f469__',
    'stm32f469zg': 'stm32f469__',
    'stm32f469zi': 'stm32f469__',
    'stm32f479ag': 'stm32f479__',
    'stm32f479ai': 'stm32f479__',
    'stm32f479bg': 'stm32f479__',
    'stm32f479bi': 'stm32f479__',
    'stm32f479ig': 'stm32f479__',
    'stm32f479ii': 'stm32f479__',
    'stm32f479ng': 'stm32f479__',
    'stm32f479ni': 'stm32f479__',
    'stm32f479vg': 'stm32f479__',
    'stm32f479vi': 'stm32f479__',
    'stm32f479zg': 'stm32f479__',
    'stm32f479zi': 'stm32f479__',
}
foreach mcu, type : mcus
  set_variable(f'st_cmsis_@mcu@_dep', declare_dependency(
    version: meson.project_version(),
    dependencies: get_variable(f'st_cmsis_@type@_dep'),
    link_args: ['-Xlinker', '--default-script=' + files('ld' / mcu + '.ld')[0].full_path()],
  ))
endforeach